# docs/swagger.yaml
@@ -59,6 +59,8 @@ definitions:
         type: array
       is_negotiable:
         type: boolean
+      likes:
+        type: integer
       name:
         type: string
       placeholder:
@@ -112,6 +114,10 @@ definitions:
     properties:
       email:
         type: string
+      liked_items:
+        items:
+          type: integer
+        type: array
       password:
         type: string
     type: object
@@ -328,6 +334,25 @@ paths:
       summary: Update item by ID
       tags:
       - item
+  /item/{id}/like:
+    post:
+      parameters:
+      - description: Item ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: Updated liked items
+          schema:
+            items:
+              format: int64
+              type: integer
+            type: array
+      summary: Like an item
+      tags:
+      - item
   /item/{id}/sell:
     post:
       parameters:
@@ -342,6 +367,25 @@ paths:
           schema:
             type: string
       summary: Update sold_at property by ID
+      tags:
+      - item
+  /item/{id}/unlike:
+    post:
+      parameters:
+      - description: Item ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: Updated liked items
+          schema:
+            items:
+              format: int64
+              type: integer
+            type: array
+      summary: Unlike an item
       tags:
       - item
   /item/{id}/view:
