# internal/api/api.go
@@ -57,6 +57,8 @@ func New(ctx context.Context, cfg *config.Config, db *db.DB, lg *slog.Logger) (*
 	e.DELETE("/item/:id", itemapi.Delete)
 	e.POST("/item/:id/view", itemapi.IncrementView)
 	e.POST("/item/:id/sell", itemapi.Sell)
+	e.POST("/item/:id/like", itemapi.Like)
+	e.POST("/item/:id/unlike", itemapi.Unlike)
 
 	// category
 	e.GET("/category", categoryapi.GetAll)
@@ -91,11 +93,13 @@ type routesConfig map[string][]string
 
 // define routes to protect with auth middleware
 var protectedRoutes = routesConfig{
-	"/item":          {http.MethodPost},
-	"/item/:id":      {http.MethodPut, http.MethodDelete},
-	"/item/:id/sell": {http.MethodPost},
-	"/auth":          {http.MethodGet},
-	"/auth/logout":   {http.MethodPost},
+	"/item":            {http.MethodPost},
+	"/item/:id":        {http.MethodPut, http.MethodDelete},
+	"/item/:id/sell":   {http.MethodPost},
+	"/item/:id/like":   {http.MethodPost},
+	"/item/:id/unlike": {http.MethodPost},
+	"/auth":            {http.MethodGet},
+	"/auth/logout":     {http.MethodPost},
 }
 
 // hello godoc
