# sql/user/models.go
@@ -5,6 +5,7 @@
 package sqluser
 
 type User struct {
-	Email    string `json:"email"`
-	Password string `json:"password"`
+	Email      string  `json:"email"`
+	Password   string  `json:"password"`
+	LikedItems []int64 `json:"liked_items"`
 }
